[metadata]
name = SHRY
author = Genki Prayogo, Kosuke Nakano
author_email = g.prayogo@icloud.com, kousuke_1123@icloud.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shry-project/SHRY
project_urls =
    Bug tracker = https://github.com/shry-project/SHRY/issues
    Documentations = https://shry-project.github.io/SHRY/
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = shry
python_requires = >=3.10.0
install_requires =
    numpy >= 2.0.0
    pandas >= 2.3.0, < 3.0.0
    pymatgen >= 2025.4.10
    pycifrw >= 0.5.0
    scipy >= 1.14.0
    sympy >= 1.13.0
    tqdm >= 4.66.0
    pytest >= 8.3.5
    pre-commit >= 4.0.2
    setuptools_scm >= 8.1.2
    spglib >= 2.7.0

[options.entry_points]
console_scripts =
    shry = shry.script:_main
